syntax = "proto3";

import "google/protobuf/timestamp.proto";
option java_package = "org.customer.details";

service PreferenceDetails{
     rpc getPreferenceDetails(PreferenceDetailsRequest) returns (PreferenceDetailsResponse);
     rpc setPreferenceDetails(AddPreferenceDetails) returns (AddedPreferenceDetailsResponse);
}

message PreferenceDetailsRequest{
  int32 customerId=1;
}

message PreferenceDetailsResponse{
  int32 preferenceId=1;
  int32 customerId=2;
  string preferredLanguage=3;
  string preferredContactMethod=4;
  bool marketingConsent=5;
  bool paperlessStatements=6;
}

message AddPreferenceDetails{
  int32 preferenceId=1;
  int32 customerId=2;
  string preferredLanguage=3;
  string preferredContactMethod=4;
  bool marketingConsent=5;
  bool paperlessStatements=6;
}

message AddedPreferenceDetailsResponse{
  string response=1;
}